--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
     --fw-medium: 500;
 
     /*Font sizes*/
-    --fs-normal: 1.2rem;
+    --fs-normal: 1rem;
     --fs-title: 2rem;
 }
 
@@ -46,6 +46,8 @@ aside
 {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
     justify-content: space-between;
 
     color: white;
@@ -57,14 +59,15 @@ aside
 {
     display: flex;
     gap: 2rem;
+    width: 80%;
     flex-direction: column;
-    padding: 2rem;
+    border: 1px solid blue;
 }
 
 .navbar-header
 {   
     display: flex;
-    padding-top: 1rem;
+    border: 1px solid yellow;
     justify-content: space-between;
 }
 
@@ -92,7 +95,7 @@ aside
 
     height: 100%;
     border-radius: 0.5rem;
-    font-size: 16px;
+    font-size: var(--fs-normal);
     transition-duration: 0.5s;
     transition-property: color, background-color, font-weigth;
 }
@@ -107,8 +110,10 @@ aside
 .navbar-footer
 {
     height: 4rem;
+    width: 100%;
     display: flex;
-    padding: 0.5rem;
+    padding: 0.5em;
+    /* padding: 0.5rem 0.5rem 0.5rem 1.5rem; */
     align-items: center;
     justify-content: space-between;
     background-color: var(--clr-primary-green);
@@ -122,7 +127,7 @@ aside
 
 .profile-name
 {
-    font-size: 1.2rem;
+    font-size: calc(var(--fs-normal) + 0.2rem);
 }
 
 .profile-name, .profile-job
@@ -158,21 +163,10 @@ h1
 
 /*SOme reseting in files*/
 
-
-
-.navbar-header
-{
-    justify-content: center;
-}
-
+/* 
 body
 {
     grid-template-columns: 5rem auto;   
-}
-
-.nav-link, .top-content
-{
-    padding: 0.5rem;
 }
 
 .nav-link
@@ -180,8 +174,17 @@ body
     justify-content: center;
 }
 
-.brand-logo, .nav-link p, .navbar-footer .profile
+.navbar-header
 {
-    display: none;
+    justify-content: center; 
 }
 
+.navbar-footer
+{
+    justify-content: center;
+}
+
+.brand-logo, .nav-link-description, .profile
+{
+    display: none;
+} */
