--- a/css/components.css
+++ b/css/components.css
@@ -3,3 +3,24 @@
     color: var(--clr-dark-black);
     background-color: var(--clr-neutral-green);
 }
+
+.hide-or-not
+{
+    display: none;
+}
+
+.progressive-disappearing
+{
+    opacity: 0;
+}
+
+
+.reduced-navbar
+{
+    grid-template-columns: 5rem auto; 
+}
+
+.centered-content
+{
+    justify-content: center;
+}
