--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,6 @@ aside
     gap: 2rem;
     width: 80%;
     flex-direction: column;
-    border: 1px solid blue;
 }
 
 .navbar-header
@@ -232,6 +231,52 @@ button[data-role="get-template"]:hover
     color: white;
     background-color: var(--clr-dark-black);
 }
+
+
+
+
+@media screen and (max-width: 1280px) {
+
+    body aside, body main
+    {
+        display: none;
+    }
+
+    body
+    {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #0CC6F7;
+    }
+
+    .prevent-card
+    {
+        border: 1px solid;
+        border-radius: 1rem;
+    }
+
+    .prevent-card picture
+    {
+        max-width: 400px;
+    }
+
+    .prevent-card picture img
+    {
+        max-width: 100%;
+    }
+
+    .prevent-text
+    {
+        font-size: 2rem;
+        font-weight: 800;
+        font-family: "Poppins";
+    }
+
+}
+
+
 
 
 /*SOme reseting in files*/
